2004-01-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/text-spanner.cc (brew_molecule): don't do shorten-pair for
	breakpoints.

	* lily/break-align-interface.cc: add doco

	* Documentation/user/refman.itely (Rehearsal marks): add index marks. 

2004-01-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.1.9

	* scm/document-markup.scm (markup-doc-node): add note about naming.

	* scm/new-markup.scm (left-align-markup): bugfix. 

	* Documentation/user/refman.itely (Ottava brackets): more doco for
	ottava.

	* lily/side-position-interface.cc (out_of_staff): also do
	out_of_staff() correctly for d == DOWN.

	* lily/text-spanner.cc (brew_molecule): only put vertical line and
	horizontal line if they move to the right.
	
	* scm/define-grobs.scm (all-grob-descriptions): set
	text-repeat-if-broken for ottava spanner

	* lily/text-spanner.cc (brew_molecule): text-repeat-if-broken
	property.

	* mf/feta18.mf: design size is 18 not 22.5

	* lily/new-lyric-combine-music-iterator.cc (process): new file.
	Add a single LyricsVoice to a melody. Melismata may be set
	individually.

	* input/regression/lyric-combine-new.ly: new file. Demo \newaddlyrics.

	* lily/dot-column.cc: add stdio.h

2004-01-12  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/item.cc: documentation for break-visibility (Thanks, John).

2004-01-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/bar-line.cc (compound_barline): add bartype :  (dotted).

	* lily/translator-def.cc: rename Translator_def to Context_def.

	* Documentation/user/internals.itely (Lexical details): clarify
	string def.

	* Documentation/user/refman.itely (Rhythmic music): add link to
	RhythmicStaff 

2004-01-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/translator.cc: document start_translation_timestep()

	* scm/output-tex.scm (tex-encoded-fontswitch): use
	round for rounding (inexact->exact yields rationals)

	* lily/*.cc: remove superfluous start_translation_timestep() calls.
