@@ -1,3 +1,9 @@
+2004-01-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* scm/music-functions.scm (direction-polyphonic-grobs): new
+	variable, share between override and revert. This fixes script
+	directions in polyphonic sections.
+
 2004-01-14  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/text-spanner.cc (brew_molecule): don't do shorten-pair for
